infra/ingresses/z2m-ingress-amer-dev.yaml
---
# Service + Endpoints for Zigbee2MQTT running on Mac Mini (external to k3s)
apiVersion: v1
kind: Service
metadata:
  name: z2m-external
  namespace: default
spec:
  ports:
  - port: 8099
    targetPort: 8099
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: z2m-external-1
  namespace: default
  labels:
    kubernetes.io/service-name: z2m-external
addressType: IPv4
endpoints:
- addresses:
  - 10.100.20.19
  conditions:
    ready: true
ports:
- name: ""
  port: 8099
  protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2m-ingress-amer-dev
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: z2m-dean-1.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
  - hosts:
    - z2m-dean-1.amer.dev
    secretName: z2m-dean-1-amer-dev-tls
  rules:
  - host: z2m-dean-1.amer.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: z2m-external
            port:
              number: 8099
